src/objects/Territory__c.object
<CustomObject>
    <description>Store the territory code related with sales rep.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Territory description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Territory_ID__c</fullName>
        <description>Territory ID.</description>
        <externalId>true</externalId>
        <label>Territory ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory</label>
    <nameField>
        <displayFormat>T-{00000000}</displayFormat>
        <label>Territory</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>